Bug 128562 - Pressing F5 (Navigation) in Calc crashes document, corrupts user profile, and makes Calc impossible to use
Summary: Pressing F5 (Navigation) in Calc crashes document, corrupts user profile, and...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
: 128564 (view as bug list)
Depends on:
Blocks: Regressions-1024plus-Columns
  Show dependency treegraph
 
Reported: 2019-11-02 22:45 UTC by eisa01
Modified: 2020-06-03 02:50 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description eisa01 2019-11-02 22:45:21 UTC
Description:
Pressing F5 to access the navigation crashes the current Calc document.

LibreOffice goes into recovery mode, but is not able to recover the document.
The user profile is also corrupted, it is no longer possible to use Calc, as it always goes into document recovery mode which is unsuccessful

It works in 6.3, so this would be a regression

Found when trying to test bug 100197

Steps to Reproduce:
* Fresh install of LibreOffice nightly
* Create new empty Calc document
* Press F5

Actual Results:
Watch LibreOffice crash and document recovery open

Expected Results:
Open of Navigation window


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.4.0.0.alpha1+
Build ID: 80109586e6cb6d3e2e0a53a9079c3125ec9b8368
CPU threads: 4; OS: Mac OS X 10.14.6; UI render: default; VCL: osx; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Oliver Brinzing 2019-11-03 09:00:13 UTC
reproducible with:

Version: 6.4.0.0.alpha1+ (x64)
Build ID: 885ae558d34dd76955c727b90eb9ae52ce85df7f
CPU threads: 4; OS: Windows 10.0 Build 18362; UI render: default; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded

open calc after restart will crash again
Comment 2 Xavier Van Wijmeersch 2019-11-03 17:14:29 UTC
Can reproduce with and open calc after restart will crash again
Need to create a new user profile, then its not crashing again

Version: 6.4.0.0.alpha1+
Build ID: 80109586e6cb6d3e2e0a53a9079c3125ec9b8368
CPU threads: 8; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: nl-BE (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Buovjaga 2019-11-03 19:28:32 UTC
Bibisected with linux-64-6.4 repo to https://gerrit.libreoffice.org/plugins/gitiles/core/+/0ef5c47547bec6319b853326603f3b807407fe78%5E!/
sc: rowcol: tdf#50916 convert core/tool

It touches sc/source/ui/inc/navipi.hxx and sc/source/ui/navipi/navipi.cxx

Adding Cc: to Noel Grandin
Comment 4 Xisco Faulí 2019-11-04 11:07:06 UTC
*** Bug 128564 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2019-11-04 13:12:41 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f07ac6d2d46cf9a86577d2622ce9b7c15887ac39

tdf#128562 crash when opening navigator in calc

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xavier Van Wijmeersch 2019-11-04 18:17:16 UTC
verified and its working, no crash, thx

Version: 6.4.0.0.alpha1+
Build ID: 074cab391c20be872a4b5d14a342eda5c541b6fd
CPU threads: 8; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: nl-BE (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 7 Xisco Faulí 2019-11-05 10:14:02 UTC
Verified in

Version: 6.4.0.0.alpha1+
Build ID: ee909ca2c02f949605f68720c3f1eef658502749
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Noel, thanks for fixing this issue!
Comment 8 artur 2020-03-02 09:16:35 UTC
UI-test in https://gerrit.libreoffice.org/c/core/+/89701