tdf#128562 crash when opening navigator in calc

regression from
    commit 0ef5c47547bec6319b853326603f3b807407fe78
    Date:   Mon Oct 28 13:08:29 2019 +0200
    sc: rowcol: tdf#50916 convert core/tool

Change-Id: If2784e3c719de39071b699a5573b65503d3cf10e
Reviewed-on: https://gerrit.libreoffice.org/81985
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>